--- a/hackathon/css/sponsor.css
+++ b/hackathon/css/sponsor.css
@@ -39,7 +39,7 @@
 } */
 
 body {
-    background-image: url(../../images/stallbg.png);
+    background-image: url(../images/stallbg.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
