--- a/hackathon/products/css/style.css
+++ b/hackathon/products/css/style.css
@@ -9775,7 +9775,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
   position: relative;
   z-index: 0;
   width: 100%;
-  background: #a23f25;
+  background: #2C6431;
 }
 
 .wrap .phone {
