--- a/hackathon/products/css/style.css
+++ b/hackathon/products/css/style.css
@@ -9756,12 +9756,12 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 a:hover, a:focus {
   text-decoration: none;
-  color: #b7472a;
+  color: #2C6431;
   outline: none !important;
 }
 
@@ -9835,8 +9835,8 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .social-media p a:hover {
-  background: #b7472a;
-  border-color: #b7472a;
+  background: #2C6431;
+  border-color: #2C6431;
 }
 
 .social-media p a:hover span {
@@ -9987,7 +9987,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .ftco-navbar-light .btn-group .dropdown-menu .dropdown-item.btn-link {
-  color: #b7472a;
+  color: #2C6431;
   text-transform: uppercase;
   font-size: 13px;
   font-weight: 500;
@@ -10017,7 +10017,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .ftco-navbar-light .navbar-nav>.nav-item>.nav-link:hover {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 @media (max-width: 991.98px) {
@@ -10068,13 +10068,13 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 
 .ftco-navbar-light .navbar-nav>.nav-item.cta>a {
   color: #fff;
-  border: 1px solid #b7472a;
+  border: 1px solid #2C6431;
   padding-top: .5rem;
   padding-bottom: .5rem;
   padding-left: 18px;
   padding-right: 18px;
   margin-top: 4px;
-  background: #b7472a;
+  background: #2C6431;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   -ms-border-radius: 2px;
@@ -10087,8 +10087,8 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .ftco-navbar-light .navbar-nav>.nav-item.cta>a:hover {
-  background: #b7472a;
-  border: 1px solid #b7472a;
+  background: #2C6431;
+  border: 1px solid #2C6431;
 }
 
 .ftco-navbar-light .navbar-nav>.nav-item.cta.cta-colored a {
@@ -10102,7 +10102,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 
 @media (max-width: 991.98px) {
   .ftco-navbar-light .navbar-nav>.nav-item.active>a {
-    color: #b7472a;
+    color: #2C6431;
   }
 }
 
@@ -10118,7 +10118,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 
 .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
   text-decoration: none;
-  color: #b7472a;
+  color: #2C6431;
   outline: none !important;
 }
 
@@ -10147,7 +10147,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .ftco-navbar-light.scrolled .btn-cart div small {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 @media (max-width: 991.98px) {
@@ -10159,12 +10159,12 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .ftco-navbar-light.scrolled .nav-item.active>a {
-  color: #b7472a !important;
+  color: #2C6431 !important;
 }
 
 .ftco-navbar-light.scrolled .nav-item.cta>a {
   color: #fff !important;
-  background: #b7472a;
+  background: #2C6431;
   border: none !important;
   padding-top: 0.5rem !important;
   padding-bottom: .5rem !important;
@@ -10183,7 +10183,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-  border-color: #b7472a;
+  border-color: #2C6431;
 }
 
 @media (max-width: 991.98px) {
@@ -10213,7 +10213,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .ftco-navbar-light.scrolled .nav-link.active {
-  color: #b7472a !important;
+  color: #2C6431 !important;
 }
 
 .ftco-navbar-light.scrolled.awake {
@@ -10234,7 +10234,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .ftco-navbar-light.scrolled .navbar-brand span {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .navbar-brand {
@@ -10297,7 +10297,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .hero-wrap .slider-text h1 span {
-  color: #b7472a;
+  color: #2C6431;
   -webkit-text-fill-color: #fff;
   -webkit-text-stroke-width: 0px;
 }
@@ -10358,11 +10358,11 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a:hover, .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a:focus {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a:hover i, .hero-wrap.hero-wrap-2 .slider-text .breadcrumbs span a:focus i {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .hero-wrap.hero-wrap-2 .slider-text .bread {
@@ -10398,7 +10398,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   margin-top: -10px;
-  color: #b7472a !important;
+  color: #2C6431 !important;
   -moz-transition: all 0.7s ease;
   -o-transition: all 0.7s ease;
   -webkit-transition: all 0.7s ease;
@@ -10491,7 +10491,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .bg-primary {
-  background: #b7472a;
+  background: #2C6431;
 }
 
 .btn {
@@ -10517,20 +10517,20 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .btn.btn-primary:hover {
-  border: 1px solid #b7472a;
+  border: 1px solid #2C6431;
   background: transparent;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .btn.btn-primary.btn-outline-primary {
-  border: 1px solid #b7472a;
+  border: 1px solid #2C6431;
   background: transparent;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .btn.btn-primary.btn-outline-primary:hover {
   border: 1px solid transparent;
-  background: #b7472a;
+  background: #2C6431;
   color: #fff;
 }
 
@@ -10541,9 +10541,9 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .btn.btn-white:hover {
-  border: 1px solid #b7472a;
+  border: 1px solid #2C6431;
   background: transparent;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .btn.btn-white.btn-outline-white {
@@ -10553,8 +10553,8 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .btn.btn-white.btn-outline-white:hover {
-  border: 1px solid #b7472a !important;
-  background: #b7472a !important;
+  border: 1px solid #2C6431 !important;
+  background: #2C6431 !important;
   color: #fff !important;
 }
 
@@ -10678,7 +10678,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .product .text .sale {
-  background: #b7472a;
+  background: #2C6431;
 }
 
 .product .text .seller {
@@ -10697,7 +10697,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 
 .product .text .category {
   font-style: italic;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .product .text .price {
@@ -10729,7 +10729,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .bootstrap-select .bs-ok-default:after {
-  color: #b7472a;
+  color: #2C6431;
   font-size: 12px;
   margin-top: 5px;
 }
@@ -10771,7 +10771,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
   height: 40px !important;
   text-align: center;
   border: 1px solid rgba(0, 0, 0, 0.1) !important;
-  color: #b7472a;
+  color: #2C6431;
   padding: 10px 20px;
   background: transparent !important;
   -webkit-border-radius: 0;
@@ -10886,7 +10886,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
   margin: 0 auto;
   border-style: solid;
   border-width: 10px 10px 0 10px;
-  border-color: #b7472a transparent transparent transparent;
+  border-color: #2C6431 transparent transparent transparent;
   opacity: 0;
 }
 
@@ -10914,7 +10914,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
   -ms-transition: all 0.3s ease;
   transition: all 0.3s ease;
   border: 1px solid transparent;
-  background: #b7472a;
+  background: #2C6431;
 }
 
 .nav-pills .nav-link.active:after {
@@ -10995,7 +10995,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .review .desc .star i {
-  color: #b7472a;
+  color: #2C6431;
   font-size: 14px;
 }
 
@@ -11029,7 +11029,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .rating-wrap .star span i {
-  color: #b7472a;
+  color: #2C6431;
   font-size: 14px;
 }
 
@@ -11055,7 +11055,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .table thead.thead-primary {
-  background: #b7472a;
+  background: #2C6431;
   border-radius: 4px;
 }
 
@@ -11165,11 +11165,11 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 /* Style the checkmark/indicator */
 
 .checkbox-primary {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .checkbox-primary input:checked~.checkmark:after {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .cart-wrap .btn-primary {
@@ -11288,7 +11288,7 @@ h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
 }
 
 .billing-form .form-control:focus, .billing-form .form-control:active {
-  border-color: #b7472a !important;
+  border-color: #2C6431 !important;
 }
 
 .billing-form textarea.form-control {
@@ -11330,7 +11330,7 @@ textarea.form-control {
 }
 
 .bg-primary {
-  background: #b7472a !important;
+  background: #2C6431 !important;
 }
 
 .bg-black {
@@ -11350,7 +11350,7 @@ textarea.form-control {
 
 .wrap-about .year strong {
   font-style: italic;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 @media (max-width: 991.98px) {
@@ -11376,7 +11376,7 @@ textarea.form-control {
   right: -10px;
   bottom: -10px;
   content: '';
-  border: 1px solid #b7472a;
+  border: 1px solid #2C6431;
   z-index: -1;
   border-radius: 50%;
   -moz-transition: all 0.6s ease;
@@ -11482,7 +11482,7 @@ textarea.form-control {
 }
 
 .ftco-footer a:hover {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .ftco-footer-social li {
@@ -11496,7 +11496,7 @@ textarea.form-control {
   width: 50px;
   display: block;
   float: left;
-  background: #b7472a;
+  background: #2C6431;
   border-radius: 50%;
   position: relative;
 }
@@ -11524,7 +11524,7 @@ textarea.form-control {
 }
 
 .footer-small-nav>li a:hover, .footer-small-nav>li a:focus {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .media .ftco-icon {
@@ -11532,7 +11532,7 @@ textarea.form-control {
 }
 
 .media .ftco-icon span {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .ftco-media {
@@ -11565,7 +11565,7 @@ textarea.form-control {
 .ftco-media .icon {
   font-size: 50px;
   display: block;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .ftco-media.text-center .ftco-icon {
@@ -11576,7 +11576,7 @@ textarea.form-control {
   font-size: 18px;
   display: inline-block;
   margin-bottom: 0;
-  color: #b7472a;
+  color: #2C6431;
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
@@ -11722,7 +11722,7 @@ textarea.form-control {
 }
 
 .testimony-section .owl-dots .owl-dot.active {
-  background: #b7472a;
+  background: #2C6431;
 }
 
 .testimony-wrap {
@@ -11748,7 +11748,7 @@ textarea.form-control {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #b7472a;
+  background: #2C6431;
 }
 
 .testimony-wrap .icon span {
@@ -11842,7 +11842,7 @@ textarea.form-control {
   bottom: 0;
   content: '';
   opacity: 0;
-  background: #b7472a;
+  background: #2C6431;
   z-index: -1;
 }
 
@@ -11860,7 +11860,7 @@ textarea.form-control {
 .ftco-counter .text strong.number {
   font-weight: 500;
   font-size: 40px;
-  color: #b7472a;
+  color: #2C6431;
   font-style: italic;
 }
 
@@ -11945,7 +11945,7 @@ textarea.form-control {
 }
 
 .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .blog-entry .meta p span {
@@ -11953,7 +11953,7 @@ textarea.form-control {
 }
 
 .blog-entry .btn-custom {
-  color: #b7472a;
+  color: #2C6431;
   font-style: italic;
   font-weight: 700;
 }
@@ -12008,7 +12008,7 @@ textarea.form-control {
 }
 
 .block-27 ul li a, .block-27 ul li span {
-  color: #b7472a;
+  color: #2C6431;
   text-align: center;
   display: inline-block;
   width: 40px;
@@ -12019,7 +12019,7 @@ textarea.form-control {
 }
 
 .block-27 ul li.active a, .block-27 ul li.active span {
-  background: #b7472a;
+  background: #2C6431;
   color: #fff;
   border: 1px solid transparent;
 }
@@ -12060,14 +12060,14 @@ textarea.form-control {
 }
 
 .dbox p a {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .dbox .icon {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background: #b7472a;
+  background: #2C6431;
   margin: 0 auto;
   margin-bottom: 20px;
 }
@@ -12082,7 +12082,7 @@ textarea.form-control {
 }
 
 .contactForm .label {
-  color: #b7472a !important;
+  color: #2C6431 !important;
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 600;
@@ -12126,7 +12126,7 @@ textarea.form-control {
 }
 
 .contactForm .form-control:focus, .contactForm .form-control:active {
-  border-color: #b7472a !important;
+  border-color: #2C6431 !important;
 }
 
 .contactForm textarea.form-control {
@@ -12165,7 +12165,7 @@ textarea.form-control {
 }
 
 .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .block-21 .text .meta>div {
@@ -12296,7 +12296,7 @@ textarea.form-control {
 
 .comment-list li .comment-body .meta {
   font-size: 15px;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .comment-list li .comment-body .reply {
@@ -12378,15 +12378,15 @@ textarea.form-control {
 
 .categories li a:hover, .categories li a:focus, .sidelink li a:hover, .sidelink li a:focus {
   outline: none;
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .categories li.active a, .sidelink li.active a {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 .categories li.active a span, .sidelink li.active a span {
-  color: #b7472a;
+  color: #2C6431;
 }
 
 #ftco-loader {
