--- a/hackathon/css/sponsor.css
+++ b/hackathon/css/sponsor.css
@@ -115,7 +115,7 @@ body::-webkit-scrollbar {
     font-weight: bold;
 }
 #flipkart-navbar {
-    background-color: #2874f0;
+    background-color: #cc41ff;
     color: #FFFFFF;
 }
 
