--- a/hackathon/css/main.css
+++ b/hackathon/css/main.css
@@ -18,6 +18,11 @@
     src: url(../fonts/poppins/Poppins-SemiBold.ttf)
 }
 
+@font-face {
+    font-family: monreg;
+    src: url(../fonts/MonumentExtended-Ultrabold.otf)
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -26,7 +31,7 @@
 
 body, html {
     height: 100%;
-    font-family: Poppins-Regular, sans-serif
+    font-family: monreg, sans-serif
 }
 
 a {
