--- a/hackathon/products/css/style.css
+++ b/hackathon/products/css/style.css
@@ -5,6 +5,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -12496,4 +12500,3 @@ textarea.form-control {
     stroke-dashoffset: -136px;
   }
 }
-
